--- a/FL7-L02/style_markup.css
+++ b/FL7-L02/style_markup.css
@@ -11,7 +11,7 @@
 	width: 300px;
 	height: 300px;
 	background: black;
-	opacity: 0.9;
+	opacity: 0.6;
 }
 
 .country {
@@ -41,6 +41,10 @@
 	margin: 0 0 15px 0px;
 	font-size: 22px;
 
+}
+
+.loc {
+	display: inline-block;
 }
 
 h2 {
@@ -75,7 +79,7 @@ a {
 
 #expand:target {
 	display: block;
-	height: 500px;
+	height: 280px;
 	width: 100%;
 	max-width: 1271px;
 	margin-left: 20px;
